--- a/react-to-do/package.json
+++ b/react-to-do/package.json
@@ -7,9 +7,13 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest -c ./jest.config.js"
   },
   "dependencies": {
+    "jest": "^29.7.0",
+    "jest-puppeteer": "^10.0.1",
+    "puppeteer": "^22.13.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
